# rust-shorten-url

./: Cargo.toml  README.md  docker-compose.yml
configuration/: base.yaml
src/: configuration.rs  helpers.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs
src/routes/resolve/: get.rs
src/routes/shorten/: post.rs
