[package]
name = "rust-shorten-url"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
actix-web = "4.11.0"
config = "0.15.16"
r2d2 = "0.8.10"
redis = { version = "0.32.5", features = ["r2d2"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
serde-aux = "4.7.0"
serde_derive = "1.0.226"
tokio = { version = "1.47.1", features = ["full"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["clock","serde"] }
url = "2.5.7"
rand = "0.8"

[dev-dependencies]
serde_json = "1.0.145"
